--- a/templates/index.html
+++ b/templates/index.html
@@ -19,25 +19,18 @@
             <div class="main_body">
                 <div class="main_top_body">
                     <img src="./../static/img/hoon.png"/>
-                    <h1>
-                        <div class="likelion_p">멋사</div>
-                        와 함께 하는<br/>
-                        게시판 CRUD 만들기
-                    </h1>
+                    <div>
+                        <h1>
+                            <div class="likelion_p">멋사</div>
+                            와 함께 하는<br/>
+                            게시판 CRUD 만들기
+                        </h1>
+                        <button type="button" onclick="location.href='./post.html'">게시판 만들어보기</button>
+                    </div>
+
                 </div>
             </div>
         </div>
-<!--        <div class="main_height_body_wrap">-->
-<!--            <div class="main_introduce_wrap">-->
-<!--                <div class="main_introduce_info">-->
-<!--                    <div class="main_introduce_imgs">-->
-<!--                        <img src="./../static/img/likelion.png" />-->
-<!--                    </div>-->
-<!--                    <h1>LIKELION</h1>-->
-<!--                    <p>상명대학교 중앙동아리</p>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
         <div class="footer">
             <img src="./../static/img/LIKELION%20UNIV_brandlogo_white_forweb_221111.png"/>
         </div>
